Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2>
 <a id="adorsholipi" class="anchor" href="#adorsholipi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>AdorshoLipi</h2>
 
-<p><img src="images/adorsholipi.gif" alt="AdorshoLipi"></p>
+<p><img src="images/adorsholipi.jpg" alt="AdorshoLipi"></p>
 
 <p>Font Source: cgimagine</p>
 
@@ -77,7 +77,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/adorsho-lipi/font<
 <h2>
 <a id="aponalohit" class="anchor" href="#aponalohit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>AponaLohit</h2>
 
-<p><img src="images/aponalohit.gif" alt="AponaLohit"></p>
+<p><img src="images/aponalohit.jpg" alt="AponaLohit"></p>
 
 <p>AponaLohit is basically the Lohit font from Ekushey with additional hinting for better look on screen. This is some wthat Unicode equivalent of popular Boishakhi font. TrueType hintings have been initiated by Ershadul Haq and later improved by Alamigr Mohammed.</p>
 
@@ -153,7 +153,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bangla/font<span c
 <h2>
 <a id="bensen" class="anchor" href="#bensen" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BenSen</h2>
 
-<p><img src="images/BenSen.gif" alt="BenSen"></p>
+<p><img src="images/bensen.jpg" alt="BenSen"></p>
 
 <p>Developer: <a href="http://www.subratasen.com/">Subrata Sen</a></p>
 
@@ -191,9 +191,9 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bensen/font<span c
 <h2>
 <a id="ekusheylohit" class="anchor" href="#ekusheylohit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>EkusheyLohit</h2>
 
-<p><img src="images/ekushey-lohit.gif" alt="EkusheyLohit"></p>
+<p><img src="images/ekushey-lohit.jpg" alt="EkusheyLohit"></p>
 
-<p>Font Source: <a href="http://www.nongnu.org/freebangfont/">Free Bangla Font Project</a></p>
+<p>Glyphs of Ekushey Lohit font has been taken from Lohit Bengali designed by Automatic Control Equipments. Unicode conversion was done by Ekushey. The font is distributed under SIL Open Font License,  v1.0. Font Source: <a href="http://www.nongnu.org/freebangfont/">Free Bangla Font Project</a></p>
 
 <h3>
 <a id="embed-font-4" class="anchor" href="#embed-font-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embed Font</h3>
@@ -229,7 +229,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/ekushey-lohit/font
 <h2>
 <a id="kalpurush" class="anchor" href="#kalpurush" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kalpurush</h2>
 
-<p><img src="images/kalpurush.gif" alt="Kalpurush"></p>
+<p><img src="images/kalpurush.jpg" alt="Kalpurush"></p>
 
 <p>Font designed by - Md. Tanbin Islam Siyam. Developed Under Avro Free Bangla Font Project. Source: <a href="http://www.omicronlab.com/">OmicronLab</a></p>
 
@@ -267,9 +267,9 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/kalpurush/font<spa
 <h2>
 <a id="mukti" class="anchor" href="#mukti" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mukti</h2>
 
-<p><img src="images/muktinarrow.gif" alt="Mukti"></p>
+<p><img src="images/mukti.jpg" alt="Mukti"></p>
 
-<p>Font Source: <a href="http://www.nongnu.org/freebangfont/">Free Bangla Font Project</a></p>
+<p>Developed by Dr. Anirban Mitra. Font Source: <a href="http://www.nongnu.org/freebangfont/">Free Bangla Font Project</a></p>
 
 <h3>
 <a id="embed-font-6" class="anchor" href="#embed-font-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embed Font</h3>
@@ -305,7 +305,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/mukti/font<span cl
 <h2>
 <a id="siyamrupali" class="anchor" href="#siyamrupali" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SiyamRupali</h2>
 
-<p><img src="images/siyam-rupali.gif" alt="SiyamRupali"></p>
+<p><img src="images/siyam-rupali.jpg" alt="SiyamRupali"></p>
 
 <p>Font Hinted by - Md. Tanbin Islam Siyam. Modified version of Rupali Bangla font. Developed Under Avro Free Bangla Font Project. Source: <a href="http://www.omicronlab.com/">OmicronLab</a></p>
 
@@ -343,9 +343,9 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/siyam-rupali/font<
 <h2>
 <a id="solaimanlipi" class="anchor" href="#solaimanlipi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SolaimanLipi</h2>
 
-<p><img src="images/solaimanlipi.gif" alt="SolaimanLipi"></p>
+<p><img src="images/solaimanlipi.jpg" alt="SolaimanLipi"></p>
 
-<p>Font Source: <a href="http://ekushey.org/">http://ekushey.org/</a></p>
+<p>SolaimanLipi is designed by Solaiman Karim. Later, Saif Hassan updated the font. The font is distributed under GPL v2. Font Source: <a href="http://ekushey.org/">http://ekushey.org/</a></p>
 
 <h3>
 <a id="embed-font-8" class="anchor" href="#embed-font-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embed Font</h3>
