--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <a id="import" class="anchor" href="#import" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/adorsho-lipi/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/adorsho-lipi/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -95,7 +95,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/adorsho-lipi/font<
 <a id="import-1" class="anchor" href="#import-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/apona-lohit/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/apona-lohit/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -133,7 +133,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/apona-lohit/font<s
 <a id="import-2" class="anchor" href="#import-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bangla/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/bangla/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -171,7 +171,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bangla/font<span c
 <a id="import-3" class="anchor" href="#import-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bensen/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/bensen/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -209,7 +209,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/bensen/font<span c
 <a id="import-4" class="anchor" href="#import-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/ekushey-lohit/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/ekushey-lohit/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -247,7 +247,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/ekushey-lohit/font
 <a id="import-5" class="anchor" href="#import-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/kalpurush/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/kalpurush/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -285,7 +285,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/kalpurush/font<spa
 <a id="import-6" class="anchor" href="#import-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/mukti/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/mukti/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -323,7 +323,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/mukti/font<span cl
 <a id="import-7" class="anchor" href="#import-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/siyam-rupali/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/siyam-rupali/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
@@ -361,7 +361,7 @@ IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/siyam-rupali/font<
 <a id="import-8" class="anchor" href="#import-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
-IMPORT url('http://fonts<span class="pl-e">.maateen.me</span>/solaiman-lipi/font<span class="pl-e">.css</span>');
+<span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/solaiman-lipi/font.css<span class="pl-pds">'</span></span>);
 &lt;/<span class="pl-ent">style</span>&gt;</pre></div>
 
 <h3>
