Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <h4>
 <a id="example" class="anchor" href="#example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>AdorshoLipi<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>AdorshoLipi<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -108,8 +108,8 @@
 <h4>
 <a id="example-1" class="anchor" href="#example-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>AponaLohit<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>AponaLohit<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -146,8 +146,8 @@
 <h4>
 <a id="example-2" class="anchor" href="#example-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Bangla<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Bangla<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -184,8 +184,8 @@
 <h4>
 <a id="example-3" class="anchor" href="#example-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>BenSen<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>BenSen<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -222,8 +222,8 @@
 <h4>
 <a id="example-4" class="anchor" href="#example-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>EkusheyLohit<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>EkusheyLohit<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -260,8 +260,8 @@
 <h4>
 <a id="example-5" class="anchor" href="#example-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Kalpurush<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Kalpurush<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -298,8 +298,8 @@
 <h4>
 <a id="example-6" class="anchor" href="#example-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Mukti<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>Mukti<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -336,8 +336,8 @@
 <h4>
 <a id="example-7" class="anchor" href="#example-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>SiyamRupali<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>SiyamRupali<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h2>
@@ -374,8 +374,8 @@
 <h4>
 <a id="example-8" class="anchor" href="#example-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<div class="highlight highlight-source-css"><pre><span class="pl-ent">p</span> { 
-    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>SolaimanLipi<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span>; 
+<div class="highlight highlight-source-css"><pre><span class="pl-ent">body</span> {
+    <span class="pl-c1"><span class="pl-c1">font-family</span></span>: <span class="pl-s"><span class="pl-pds">'</span>SolaimanLipi<span class="pl-pds">'</span></span>, <span class="pl-c1">Arial</span>, <span class="pl-c1">sans-serif</span> <span class="pl-k">!important</span>;
 }</pre></div>
 
 <h1>
