--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/adorsho-lipi/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import" class="anchor" href="#import" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css" class="anchor" href="#or-import-in-css" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/adorsho-lipi/font.css<span class="pl-pds">'</span></span>);
@@ -92,7 +92,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/apona-lohit/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-1" class="anchor" href="#import-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-1" class="anchor" href="#or-import-in-css-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/apona-lohit/font.css<span class="pl-pds">'</span></span>);
@@ -130,7 +130,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/bangla/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-2" class="anchor" href="#import-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-2" class="anchor" href="#or-import-in-css-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/bangla/font.css<span class="pl-pds">'</span></span>);
@@ -168,7 +168,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/bensen/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-3" class="anchor" href="#import-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-3" class="anchor" href="#or-import-in-css-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/bensen/font.css<span class="pl-pds">'</span></span>);
@@ -206,7 +206,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/ekushey-lohit/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-4" class="anchor" href="#import-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-4" class="anchor" href="#or-import-in-css-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/ekushey-lohit/font.css<span class="pl-pds">'</span></span>);
@@ -244,7 +244,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/kalpurush/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-5" class="anchor" href="#import-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-5" class="anchor" href="#or-import-in-css-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/kalpurush/font.css<span class="pl-pds">'</span></span>);
@@ -282,7 +282,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/mukti/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-6" class="anchor" href="#import-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-6" class="anchor" href="#or-import-in-css-6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/mukti/font.css<span class="pl-pds">'</span></span>);
@@ -320,7 +320,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/siyam-rupali/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-7" class="anchor" href="#import-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-7" class="anchor" href="#or-import-in-css-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/siyam-rupali/font.css<span class="pl-pds">'</span></span>);
@@ -358,7 +358,7 @@
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">link</span> href="http://fonts<span class="pl-e">.maateen.me</span>/solaiman-lipi/font<span class="pl-e">.css</span>" rel="stylesheet"&gt;</pre></div>
 
 <h4>
-<a id="import-8" class="anchor" href="#import-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMPORT</h4>
+<a id="or-import-in-css-8" class="anchor" href="#or-import-in-css-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Or, IMPORT in CSS</h4>
 
 <div class="highlight highlight-source-css"><pre>&lt;<span class="pl-ent">style</span>&gt;
 <span class="pl-k">@import</span> <span class="pl-c1">url</span>(<span class="pl-s"><span class="pl-pds">'</span>http://fonts.maateen.me/solaiman-lipi/font.css<span class="pl-pds">'</span></span>);
